test/resources/lexer/passing/Comments.amy
object Comments
  // This is a single line comment
  val a: Int(32) = 1 // inline comment
  /* This is a multi-line
     comment that spans
     multiple lines */
  val b: Int(32) = 2
  /* single line block comment */
  val c: Int(32) = 3
end Comments
