test/resources/lexer/failing/UnclosedComment.amy
object UnclosedComment
  /* This comment is never closed
  val a = 1
end UnclosedComment
